actualizamos comentarios sobre configuracion nginx que finalmente funciona

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,9 @@
-# -> https://stackademic.com/blog/how-to-serve-an-angular-application-with-nginx
+# Por defecto, tal como viene la maquina nginx... no funcionaba... pero creo que era porque no desplegabamos bien
+# al tener una carpeta "browser" en el outputpath del build. De todas formas vemos este ejemplo de fichero en
+# https://stackademic.com/blog/how-to-serve-an-angular-application-with-nginx
+# y configuramos asi. Esto supondra, que vamos a reeamplazar todo dentro del "html" de nginx para meter
+# nuestra aplicacion, y por tanto accederemos a ella en el / directo y no en un /angular-j-generadores-fe2.
+# Eso si, esto implica que todo el contenido final con el index.html estara directamente guardado en "html" de nginx
 
 # the events block is required
 events{}
