--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-j-generadores-fe2",
-  "version": "1.6.0",
+  "version": "1.6.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -17,11 +17,13 @@
     "@angular/core": "^18.2.0",
     "@angular/forms": "^18.2.0",
     "@angular/material": "^18.2.6",
+    "@angular/material-moment-adapter": "^18.2.10",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "file-saver": "^2.0.5",
     "ngx-color-picker": "^17.0.0",
+    "ngx-mat-timepicker": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
