prueba ficheros internacionalizacion en subfolder i19n

--- a/nginx.conf
+++ b/nginx.conf
@@ -21,6 +21,10 @@ http {
         # index.html file for us and it will be in the above directory)
         index index.html;
 
+        location /i18n/ {
+          autoindex on;
+        }
+
         # specify the configuration for the '/' location
         location / {
             # try to serve the requested URI. if that fails then try to
