testeo: i18n en subfolder

--- a/nginx.conf
+++ b/nginx.conf
@@ -30,5 +30,10 @@ http {
             # the index.html file
             try_files $uri $uri/ /index.html;
         }
+
+        # specify the configuration for the '/i18n' location
+        location /i18n {
+            alias /usr/share/nginx/html/i18n;
+        }
     }
 }
