--- a/nginx.conf
+++ b/nginx.conf
@@ -32,7 +32,7 @@ http {
         }
 
         # specify the configuration for the '/i18n' location
-        location /i18n {
+        location ^~ /i18n {
             alias /usr/share/nginx/html/i18n;
         }
     }
