Solventado finalmente: archivos de idioma en subfolder i18n

--- a/nginx.conf
+++ b/nginx.conf
@@ -31,9 +31,10 @@ http {
             try_files $uri $uri/ /index.html;
         }
 
-        # specify the configuration for the '/i18n' location
-        location ^~ /i18n {
-            alias /usr/share/nginx/html/i18n;
-        }
+        #NOTA: en principio no necesario, finalmente en el Dockerfile hemos forzado copiar
+        #el subfolder i18n en el html de nginx y con eso ya los encuentra
+        #location /i18n {
+        #    alias /usr/share/nginx/html/i18n;
+        #}
     }
 }
