subida angular material

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@angular/compiler": "^19.0.3",
     "@angular/core": "^19.0.3",
     "@angular/forms": "^19.0.3",
-    "@angular/material": "^18.2.6",
+    "@angular/material": "^19.0.2",
+    "@angular/material-moment-adapter": "^19.0.2",
     "@angular/platform-browser": "^19.0.3",
     "@angular/platform-browser-dynamic": "^19.0.3",
     "@angular/router": "^19.0.3",
@@ -25,6 +26,7 @@
     "@ngx-translate/http-loader": "^16.0.0",
     "file-saver": "^2.0.5",
     "ngx-color-picker": "^17.0.0",
+    "ngx-mat-timepicker": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
