--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "test": "ng test",
     "lint": "ng lint",
     "lint:html": "html-validate \"src/**/*.html\"",
-    "lint:all": "npm run lint && npm run lint:html"
+    "lint:all": "npm run lint && npm run lint:html",
+    "e2e": "playwright test",
+    "e2e:ui": "playwright test --ui",
+    "e2e:debug": "PWDEBUG=1 playwright test"
   },
   "private": true,
   "dependencies": {
@@ -38,10 +41,13 @@
     "@angular-devkit/build-angular": "^19.0.4",
     "@angular/cli": "^19.0.4",
     "@angular/compiler-cli": "^19.0.3",
+    "@axe-core/playwright": "^4.10.2",
     "@ngx-env/builder": "^19.0.2",
+    "@playwright/test": "^1.55.0",
     "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
     "angular-eslint": "20.1.1",
+    "axe-html-reporter": "^2.2.11",
     "eslint": "^9.29.0",
     "html-validate": "^9.7.1",
     "jasmine-core": "~5.2.0",
